--- a/index.html
+++ b/index.html
@@ -191,37 +191,37 @@ jQuery(function ($) {
 			<div class="owl-carousel owl-theme">
 				<div>
 					<div class="client text-white text-center orange">
-					<img src="images/client1" alt="Micol Halev client ">
+					<img src="images/client1.jpg" alt="Micol Halev client ">
 						<h5>Sam <br> Age 10	</h5>
 					</div>
 				 </div>
 				 <div>
 					 <div class="client text-white text-center blue">
-					 <img src="images/client2" alt="Micol Halev client ">
+					 <img src="images/client2.jpg" alt="Micol Halev client ">
 						 <h5>Malky <br> Age 7	</h5>
 					 </div>
 					</div>
 					<div>
 						<div class="client text-white text-center purple">
-						<img src="images/client3" alt="Micol Halev client ">
+						<img src="images/client3.jpg" alt="Micol Halev client ">
 							<h5>Chana <br> Age 4	</h5>
 						</div>
 					 </div>
 					 <div>
 						 <div class="client text-white text-center orange">
-						 <img src="images/client4" alt="Micol Halev client ">
+						 <img src="images/client4.jpg" alt="Micol Halev client ">
 							 <h5>Elimelech <br> Age 1	</h5>
 						 </div>
 						</div>
 						<div>
 							<div class="client text-white text-center green">
-							<img src="images/client5" alt="Micol Halev client ">
+							<img src="images/client5.jpg" alt="Micol Halev client ">
 								<h5>Yitzchok <br> Age 16	</h5>
 							</div>
 						 </div>
 						 <div>
 							 <div class="client text-white text-center purple">
-							 <img src="images/client6" alt="Micol Halev client ">
+							 <img src="images/client6.jpg" alt="Micol Halev client ">
 								 <h5>Simmy <br> Age 10	</h5>
 							 </div>
 							</div>
